fix h4 padding on mobile

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -19,9 +19,10 @@
   flex-grow: 1;
 }
 @media screen and (max-width: 640px) {
-  .container p {
+  .container p,.feature h4 {
     padding: 0 2rem;
     }
+
     .privacy-policy p {
       padding: 0;
     }
